--- a/iris_bar.ipynb
+++ b/iris_bar.ipynb
@@ -441,16 +441,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1a1deb3a90>"
+       "<matplotlib.collections.PathCollection at 0x1a1de9c390>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -468,7 +468,7 @@
     }
    ],
    "source": [
-    "plt.scatter(iris_pca.T[0], iris_pca.T[1], color=[colors[x] for x in iris_df.index])"
+    "plt.scatter(*iris_pca.T, color=[colors[x] for x in iris_df.index])"
    ]
   },
   {
