--- a/iris_bar.ipynb
+++ b/iris_bar.ipynb
@@ -501,11 +501,316 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "      <th>total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>setosa</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>10.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>setosa</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>9.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>setosa</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>9.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>setosa</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>9.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>setosa</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>10.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>virginica</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>17.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>virginica</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>15.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>virginica</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>virginica</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>17.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>virginica</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>15.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>150 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           sepal length (cm)  sepal width (cm)  petal length (cm)  \\\n",
+       "name                                                                \n",
+       "setosa                   5.1               3.5                1.4   \n",
+       "setosa                   4.9               3.0                1.4   \n",
+       "setosa                   4.7               3.2                1.3   \n",
+       "setosa                   4.6               3.1                1.5   \n",
+       "setosa                   5.0               3.6                1.4   \n",
+       "...                      ...               ...                ...   \n",
+       "virginica                6.7               3.0                5.2   \n",
+       "virginica                6.3               2.5                5.0   \n",
+       "virginica                6.5               3.0                5.2   \n",
+       "virginica                6.2               3.4                5.4   \n",
+       "virginica                5.9               3.0                5.1   \n",
+       "\n",
+       "           petal width (cm)  total  \n",
+       "name                                \n",
+       "setosa                  0.2   10.2  \n",
+       "setosa                  0.2    9.5  \n",
+       "setosa                  0.2    9.4  \n",
+       "setosa                  0.2    9.4  \n",
+       "setosa                  0.2   10.2  \n",
+       "...                     ...    ...  \n",
+       "virginica               2.3   17.2  \n",
+       "virginica               1.9   15.7  \n",
+       "virginica               2.0   16.7  \n",
+       "virginica               2.3   17.3  \n",
+       "virginica               1.8   15.8  \n",
+       "\n",
+       "[150 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "iris_df_long = iris_df.reset_index().melt(id_vars='name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>sepal length (cm)</td>\n",
+       "      <td>5.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>sepal length (cm)</td>\n",
+       "      <td>4.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>sepal length (cm)</td>\n",
+       "      <td>4.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>sepal length (cm)</td>\n",
+       "      <td>4.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>sepal length (cm)</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>745</td>\n",
+       "      <td>virginica</td>\n",
+       "      <td>total</td>\n",
+       "      <td>17.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>746</td>\n",
+       "      <td>virginica</td>\n",
+       "      <td>total</td>\n",
+       "      <td>15.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>747</td>\n",
+       "      <td>virginica</td>\n",
+       "      <td>total</td>\n",
+       "      <td>16.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>748</td>\n",
+       "      <td>virginica</td>\n",
+       "      <td>total</td>\n",
+       "      <td>17.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>749</td>\n",
+       "      <td>virginica</td>\n",
+       "      <td>total</td>\n",
+       "      <td>15.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>750 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          name           variable  value\n",
+       "0       setosa  sepal length (cm)    5.1\n",
+       "1       setosa  sepal length (cm)    4.9\n",
+       "2       setosa  sepal length (cm)    4.7\n",
+       "3       setosa  sepal length (cm)    4.6\n",
+       "4       setosa  sepal length (cm)    5.0\n",
+       "..         ...                ...    ...\n",
+       "745  virginica              total   17.2\n",
+       "746  virginica              total   15.7\n",
+       "747  virginica              total   16.7\n",
+       "748  virginica              total   17.3\n",
+       "749  virginica              total   15.8\n",
+       "\n",
+       "[750 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris_df_long"
    ]
   },
   {
