added groupby code

--- a/groupby_reformatting.ipynb
+++ b/groupby_reformatting.ipynb
@@ -1059,7 +1059,8 @@
    ],
    "source": [
     "# finally, we need to get the last review date\n",
-    "# we first subset the data into row where rev_stts_code is R\n"
+    "# we first subset the data into row where rev_stts_code is R\n",
+    "df.loc[df['rev_stts_code']=='R']"
    ]
   },
   {
