added pdf combiner

--- a/pdf_combiner.ipynb
+++ b/pdf_combiner.ipynb
@@ -376,6 +376,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create all files at once"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for num in number_groups.keys():\n",
+    "    file_list = pdf_file_getter(num)\n",
+    "    pdf_object = pdf_combiner(file_list)\n",
+    "    pdf_writer(pdf_object, \"{}_combined.pdf\".format(num))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
