added pdf combiner

--- a/pdf_combiner.ipynb
+++ b/pdf_combiner.ipynb
@@ -395,6 +395,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For shits and giggles, here's a single function to do everything."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pdf_writer(number_csv, pdf_directory, output_suffix=\"_combined\"):\n",
+    "    numbers = pd.read_csv(number_csv)\n",
+    "    pdf_dir = Path(pdf_directory)\n",
+    "    number_groups = defaultdict(list)\n",
+    "    for lead, proposal in zip(numbers['Lead'], numbers['Proposal']):\n",
+    "        number_groups[lead].append(proposal)\n",
+    "    def pdf_file_getter(a_dict_key):\n",
+    "        files = []\n",
+    "        for proposal in number_groups[a_dict_key]:\n",
+    "            files.extend([i.as_posix() for i in pdf_dir.glob('{}*'.format(proposal))])\n",
+    "        return files\n",
+    "    def pdf_combiner(pdf_list):\n",
+    "        pdfs = [PyPDF2.PdfFileReader(i) for i in pdf_list]\n",
+    "        pdfWriter = PyPDF2.PdfFileWriter()\n",
+    "        for pdf in pdfs:\n",
+    "            for pagenum in range(pdf.numPages):\n",
+    "                page = pdf.getPage(pagenum)\n",
+    "                pdfWriter.addPage(page)\n",
+    "        return pdfWriter\n",
+    "    def pdf_writer(pdf_object, file_name):\n",
+    "        with open(file_name, 'wb') as outfile:\n",
+    "            pdf_object.write(outfile)\n",
+    "    for num in number_groups.keys():\n",
+    "        file_list = pdf_file_getter(num)\n",
+    "        pdf_object = pdf_combiner(file_list)\n",
+    "        pdf_writer(pdf_object, \"{0}{1}.pdf\".format(num, output_suffix))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdf_writer(id_numders_csv, pdf_dir)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
