added pdf combiner

--- a/pdf_combiner.ipynb
+++ b/pdf_combiner.ipynb
@@ -403,11 +403,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pdf_writer(number_csv, pdf_directory, output_suffix=\"_combined\"):\n",
+    "def pdf_combiner(number_csv, pdf_directory, output_suffix=\"_combined\"):\n",
     "    numbers = pd.read_csv(number_csv)\n",
     "    pdf_dir = Path(pdf_directory)\n",
     "    number_groups = defaultdict(list)\n",
@@ -437,11 +437,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdf_writer(id_numders_csv, pdf_dir)"
+    "pdf_combiner(id_numders_csv, pdf_dir)"
    ]
   },
   {
