added name and sorting

--- a/pdf_combiner.ipynb
+++ b/pdf_combiner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,6 +58,7 @@
        "      <th></th>\n",
        "      <th>Lead</th>\n",
        "      <th>Proposal</th>\n",
+       "      <th>PI NAME</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -65,47 +66,53 @@
        "      <td>0</td>\n",
        "      <td>2023106</td>\n",
        "      <td>2023106</td>\n",
+       "      <td>Lewis, Allison</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>2023288</td>\n",
        "      <td>2023288</td>\n",
+       "      <td>Snyder, Ben</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>2023288</td>\n",
        "      <td>2023092</td>\n",
+       "      <td>Some, Loser</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>2022392</td>\n",
        "      <td>2022392</td>\n",
+       "      <td>Sanders, Bernie</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>2022392</td>\n",
        "      <td>2022424</td>\n",
+       "      <td>Doe, Jane</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
        "      <td>2022392</td>\n",
        "      <td>2022389</td>\n",
+       "      <td>Random, Person</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Lead  Proposal\n",
-       "0  2023106   2023106\n",
-       "1  2023288   2023288\n",
-       "2  2023288   2023092\n",
-       "3  2022392   2022392\n",
-       "4  2022392   2022424\n",
-       "5  2022392   2022389"
+       "      Lead  Proposal          PI NAME\n",
+       "0  2023106   2023106   Lewis, Allison\n",
+       "1  2023288   2023288      Snyder, Ben\n",
+       "2  2023288   2023092      Some, Loser\n",
+       "3  2022392   2022392  Sanders, Bernie\n",
+       "4  2022392   2022424        Doe, Jane\n",
+       "5  2022392   2022389   Random, Person"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,35 +132,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "for lead, proposal in zip(numbers['Lead'], numbers['Proposal']):\n",
-    "    number_groups[lead].append(proposal)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(list,\n",
-       "            {2023106: [2023106],\n",
-       "             2023288: [2023288, 2023092],\n",
-       "             2022392: [2022392, 2022424, 2022389]})"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "number_groups"
+    "    number_groups[lead].append(proposal)\n",
+    "    \n",
+    "# sort so that lead proposal is always at the start of the list\n",
+    "number_groups = {i:sorted(j, key=lambda x: 1 if x==i else 2) for i,j in number_groups.items()}\n",
+    "\n",
+    "# get PI last names that correspond to each lead proposal\n",
+    "names = {i: numbers.loc[(numbers['Lead']==i) & \\\n",
+    "           (numbers['Lead']==numbers['Proposal'])]['PI NAME'].values[0].split(',')[0] \\\n",
+    "             for i in number_groups.keys()}"
    ]
   },
   {
@@ -165,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +175,7 @@
        "[PosixPath('pdfs/2023106.pdf'), PosixPath('pdfs/2023106_COA.pdf')]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +202,7 @@
        "['pdfs/2023106.pdf', 'pdfs/2023106_COA.pdf']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,20 +220,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pdf_file_getter(a_dict_key):\n",
     "    files = []\n",
     "    for proposal in number_groups[a_dict_key]:\n",
-    "        files.extend([i.as_posix() for i in pdfs.glob('{}*'.format(proposal))])\n",
+    "        files.extend([i.as_posix() for i in pdfs.glob('{}*.pdf'.format(proposal))])\n",
     "    return files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +242,7 @@
        "['pdfs/2023106.pdf', 'pdfs/2023106_COA.pdf']"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +265,7 @@
        " 'pdfs/2023092.pdf']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +285,7 @@
        "['pdfs/2022392_COA.pdf', 'pdfs/2022424_COA.pdf', 'pdfs/2022389_COA.pdf']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,16 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<PyPDF2.pdf.PdfFileWriter at 0x1242d8d90>"
+       "<PyPDF2.pdf.PdfFileWriter at 0x11f463d90>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,14 +357,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "num = 2022392\n",
     "file_list = pdf_file_getter(num)\n",
     "pdf_object = pdf_combiner(file_list)\n",
-    "pdf_writer(pdf_object, \"{}_combined.pdf\".format(num))"
+    "pdf_writer(pdf_object, \"{}_{}_combined.pdf\".format(names[num], num))"
    ]
   },
   {
@@ -384,14 +376,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "for num in number_groups.keys():\n",
     "    file_list = pdf_file_getter(num)\n",
     "    pdf_object = pdf_combiner(file_list)\n",
-    "    pdf_writer(pdf_object, \"{}_combined.pdf\".format(num))"
+    "    pdf_writer(pdf_object, \"{}_{}_combined.pdf\".format(names[num], num))"
    ]
   },
   {
