added name and sorting

--- a/pdf_combiner.ipynb
+++ b/pdf_combiner.ipynb
@@ -325,7 +325,7 @@
     {
      "data": {
       "text/plain": [
-       "<PyPDF2.pdf.PdfFileWriter at 0x11f463d90>"
+       "<PyPDF2.pdf.PdfFileWriter at 0x1164de650>"
       ]
      },
      "execution_count": 14,
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,6 +405,11 @@
     "    number_groups = defaultdict(list)\n",
     "    for lead, proposal in zip(numbers['Lead'], numbers['Proposal']):\n",
     "        number_groups[lead].append(proposal)\n",
+    "    number_groups = {i:sorted(j, key=lambda x: 1 if x==i else 2) \\\n",
+    "                     for i,j in number_groups.items()}\n",
+    "    names = {i: numbers.loc[(numbers['Lead']==i) & \\\n",
+    "           (numbers['Lead']==numbers['Proposal'])]['PI NAME'].values[0].split(',')[0] \\\n",
+    "             for i in number_groups.keys()}\n",
     "    def pdf_file_getter(a_dict_key):\n",
     "        files = []\n",
     "        for proposal in number_groups[a_dict_key]:\n",
@@ -424,12 +429,12 @@
     "    for num in number_groups.keys():\n",
     "        file_list = pdf_file_getter(num)\n",
     "        pdf_object = pdf_combiner(file_list)\n",
-    "        pdf_writer(pdf_object, \"{0}{1}.pdf\".format(num, output_suffix))"
+    "        pdf_writer(pdf_object, \"{0}_{1}{2}.pdf\".format(names[num], num, output_suffix))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
