added name and sorting

--- a/pdf_combiner.ipynb
+++ b/pdf_combiner.ipynb
@@ -137,11 +137,281 @@
    "outputs": [],
    "source": [
     "for lead, proposal in zip(numbers['Lead'], numbers['Proposal']):\n",
-    "    number_groups[lead].append(proposal)\n",
-    "    \n",
-    "# sort so that lead proposal is always at the start of the list\n",
-    "number_groups = {i:sorted(j, key=lambda x: 1 if x==i else 2) for i,j in number_groups.items()}\n",
-    "\n",
+    "    number_groups[lead].append(proposal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To sort the list so that the lead proposal is always first, we can just use the built in Python `sorted` function, but with a tweak. Normally, `sorted` will sort alphabetically or numerically, but can be modified by using a lbamda function as a key. Let's use the PI names column as a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Lewis, Allison', 'Snyder, Ben', 'Some, Loser', 'Sanders, Bernie',\n",
+       "       'Doe, Jane', 'Random, Person'], dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_list = numbers['PI NAME'].values\n",
+    "a_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Doe, Jane',\n",
+       " 'Lewis, Allison',\n",
+       " 'Random, Person',\n",
+       " 'Sanders, Bernie',\n",
+       " 'Snyder, Ben',\n",
+       " 'Some, Loser']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sorted alphabetically by last name\n",
+    "sorted(a_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Snyder, Ben',\n",
+       " 'Some, Loser',\n",
+       " 'Sanders, Bernie',\n",
+       " 'Lewis, Allison',\n",
+       " 'Doe, Jane',\n",
+       " 'Random, Person']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using a key to force S names to appear first\n",
+    "# considers anything starting with S to be key 1 and anything else 2\n",
+    "# sorts according to key\n",
+    "sorted(a_list, key=lambda x: 1 if x.startswith('S') else 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Lewis, Allison',\n",
+       " 'Snyder, Ben',\n",
+       " 'Some, Loser',\n",
+       " 'Sanders, Bernie',\n",
+       " 'Doe, Jane',\n",
+       " 'Random, Person']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# forcing a specific name to appear first\n",
+    "sorted(a_list, key=lambda x: 1 if x=='Lewis, Allison' else 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creates a new dictionary with lists sorted to that the lead proposal is always first\n",
+    "number_groups = {i:sorted(j, key=lambda x: 1 if x==i else 2) for i,j in number_groups.items()}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For names, we would like a dictionary of all the lead proposal numbers, and the corresponding last name. Get this by iterating over the lead proposal numbers, the keys in the number_groups."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys([2023106, 2023288, 2022392])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number_groups.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Lead  Proposal         PI NAME\n",
+      "0  2023106   2023106  Lewis, Allison\n",
+      "      Lead  Proposal      PI NAME\n",
+      "1  2023288   2023288  Snyder, Ben\n",
+      "2  2023288   2023092  Some, Loser\n",
+      "      Lead  Proposal          PI NAME\n",
+      "3  2022392   2022392  Sanders, Bernie\n",
+      "4  2022392   2022424        Doe, Jane\n",
+      "5  2022392   2022389   Random, Person\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use each key to subset the data\n",
+    "for i in number_groups.keys():\n",
+    "    print(numbers.loc[(numbers['Lead']==i)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Lead  Proposal         PI NAME\n",
+      "0  2023106   2023106  Lewis, Allison\n",
+      "      Lead  Proposal      PI NAME\n",
+      "1  2023288   2023288  Snyder, Ben\n",
+      "      Lead  Proposal          PI NAME\n",
+      "3  2022392   2022392  Sanders, Bernie\n"
+     ]
+    }
+   ],
+   "source": [
+    "# need to make sure we get the right row, so also subset where lead==proposal\n",
+    "for i in number_groups.keys():\n",
+    "    print(numbers.loc[(numbers['Lead']==i) & (numbers['Lead']==numbers['Proposal'])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    Lewis, Allison\n",
+      "Name: PI NAME, dtype: object\n",
+      "1    Snyder, Ben\n",
+      "Name: PI NAME, dtype: object\n",
+      "3    Sanders, Bernie\n",
+      "Name: PI NAME, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get just the pi name\n",
+    "for i in number_groups.keys():\n",
+    "    print(numbers.loc[(numbers['Lead']==i) & (numbers['Lead']==numbers['Proposal'])]['PI NAME'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lewis, Allison\n",
+      "Snyder, Ben\n",
+      "Sanders, Bernie\n"
+     ]
+    }
+   ],
+   "source": [
+    "# as a string\n",
+    "for i in number_groups.keys():\n",
+    "    print(numbers.loc[(numbers['Lead']==i) & (numbers['Lead']==numbers['Proposal'])]['PI NAME'].values[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lewis\n",
+      "Snyder\n",
+      "Sanders\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split string to get last name\n",
+    "for i in number_groups.keys():\n",
+    "    print(numbers.loc[(numbers['Lead']==i) & \\\n",
+    "                      (numbers['Lead']==numbers['Proposal'])] \\\n",
+    "                      ['PI NAME'].values[0].split(',')[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make into a dictionary\n",
     "# get PI last names that correspond to each lead proposal\n",
     "names = {i: numbers.loc[(numbers['Lead']==i) & \\\n",
     "           (numbers['Lead']==numbers['Proposal'])]['PI NAME'].values[0].split(',')[0] \\\n",
@@ -157,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +445,7 @@
        "[PosixPath('pdfs/2023106.pdf'), PosixPath('pdfs/2023106_COA.pdf')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +472,7 @@
        "['pdfs/2023106.pdf', 'pdfs/2023106_COA.pdf']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +512,7 @@
        "['pdfs/2023106.pdf', 'pdfs/2023106_COA.pdf']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +535,7 @@
        " 'pdfs/2023092.pdf']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +555,7 @@
        "['pdfs/2022392_COA.pdf', 'pdfs/2022424_COA.pdf', 'pdfs/2022389_COA.pdf']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,16 +589,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<PyPDF2.pdf.PdfFileWriter at 0x1164de650>"
+       "<PyPDF2.pdf.PdfFileWriter at 0x111f30950>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
