added sort by len

--- a/pdf_combiner.ipynb
+++ b/pdf_combiner.ipynb
@@ -485,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's write a function that takes a key from the dictionary and returns all files associated with it."
+    "Now let's write a function that takes a key from the dictionary and returns all files associated with it. We also want to make sure the file with just the id number appears first. We can do that by sorting by length."
    ]
   },
   {
@@ -497,7 +497,9 @@
     "def pdf_file_getter(a_dict_key):\n",
     "    files = []\n",
     "    for proposal in number_groups[a_dict_key]:\n",
-    "        files.extend([i.as_posix() for i in pdfs.glob('{}*.pdf'.format(proposal))])\n",
+    "        files_for_id = [i.as_posix() for i in pdfs.glob('{}*.pdf'.format(proposal))]\n",
+    "        files_for_id = sorted(files_for_id, key=len)\n",
+    "        files.extend(files_for_id)\n",
     "    return files"
    ]
   },
@@ -531,8 +533,8 @@
       "text/plain": [
        "['pdfs/2023288.pdf',\n",
        " 'pdfs/2023288_COA.pdf',\n",
-       " 'pdfs/2023092_COA.pdf',\n",
-       " 'pdfs/2023092.pdf']"
+       " 'pdfs/2023092.pdf',\n",
+       " 'pdfs/2023092_COA.pdf']"
       ]
      },
      "execution_count": 23,
@@ -595,7 +597,7 @@
     {
      "data": {
       "text/plain": [
-       "<PyPDF2.pdf.PdfFileWriter at 0x111f30950>"
+       "<PyPDF2.pdf.PdfFileWriter at 0x116bc1fd0>"
       ]
      },
      "execution_count": 26,
