added sort by len

--- a/pdf_combiner.ipynb
+++ b/pdf_combiner.ipynb
@@ -685,7 +685,9 @@
     "    def pdf_file_getter(a_dict_key):\n",
     "        files = []\n",
     "        for proposal in number_groups[a_dict_key]:\n",
-    "            files.extend([i.as_posix() for i in pdf_dir.glob('{}*'.format(proposal))])\n",
+    "            files_for_id = [i.as_posix() for i in pdfs.glob('{}*.pdf'.format(proposal))]\n",
+    "            files_for_id = sorted(files_for_id, key=len)\n",
+    "            files.extend(files_for_id)\n",
     "        return files\n",
     "    def pdf_combiner(pdf_list):\n",
     "        pdfs = [PyPDF2.PdfFileReader(i) for i in pdf_list]\n",
